KERN-60
git-svn-id: https://source.sakaiproject.org/contrib/k2/trunk@57259 fdecad78-55fc-0310-b1b2-d7d25cf747c9